--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -4,7 +4,7 @@ section {
   background-size: cover;
   text-align: center;
   position: relative;
-  padding: $spacer;
+  padding: $spacer-sm;
 
   .container-fluid {
     padding: $spacer-sm;
