--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,13 +1,14 @@
 $light-color: #f0f0f0;
 $grey-color: #747474;
 $dark-color: #333333;
-$accent-color: #2ecc71;
+$accent-color: #20bf6b;
 
 $dark-bg: #222222;
 
+$title-size: 7rem;
+$subtitle-size: 3rem;
 $font-size-sm: 0.8rem;
-$title-size: 90px;
-$subtitle-size: 50px;
+$font-size-lg: 1.5rem;
 
 $spacer: 2rem;
 $spacer-sm: 1rem;
@@ -22,11 +23,11 @@ $profile-pic-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
 $heading-font: "Rubik", sans-serif;
 $body-font: "Karla", sans-serif;
 
-$level-high-1: #38efc7;
-$level-high-2: #38ef7d;
+$level-high-1: #f12711;
+$level-high-2: #f5ba19;
 
 $level-medium-1: #f12711;
 $level-medium-2: #f5ba19;
 
-$level-low-1: #63fc27;
-$level-low-2: #ffff1c;
+$level-low-1: #f12711;
+$level-low-2: #f5ba19;
