--- a/src/styles/scss/_footer.scss
+++ b/src/styles/scss/_footer.scss
@@ -10,6 +10,10 @@ $social-size: 1.5rem;
     color: $accent-color !important;
   }
 
+  i:hover {
+    color: $accent-color !important;
+  }
+
   #username {
     color: $accent-color;
   }
