--- a/src/styles/scss/_header.scss
+++ b/src/styles/scss/_header.scss
@@ -19,8 +19,15 @@ header {
   }
 
   nav {
+    .navbar-brand {
+      font-size: $font-size-lg;
+    }
     a {
       color: $light-color !important;
+
+      .name {
+        color: $accent-color !important;
+      }
     }
     .active {
       a {
@@ -49,6 +56,8 @@ header {
       }
       #typewriter {
         font-size: $subtitle-size;
+        color: inherit;
+        text-transform: none;
       }
     }
   }
