--- a/src/styles/scss/_style.scss
+++ b/src/styles/scss/_style.scss
@@ -1,3 +1,11 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 html,
 body,
 #app {
@@ -8,7 +16,9 @@ body,
 }
 
 body {
+  box-sizing: border-box;
   overflow-x: hidden;
+  color: $light-color;
 }
 
 h1,
@@ -18,15 +28,23 @@ h4 {
   font-family: $heading-font;
 }
 
+h2,
 h3 {
   text-transform: uppercase;
-  font-size: 1.1rem;
   color: $grey-color;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.1rem;
 }
 
 h4 {
   font-style: italic;
-  font-size: $font-size-sm;
+  // font-size: $font-size-sm;
 }
 
 a:hover {
@@ -38,7 +56,7 @@ section {
   h1 {
     text-decoration: underline;
     text-decoration-color: $accent-color;
-    text-decoration-thickness: 6px;
+    text-decoration-thickness: 0.375rem;
   }
   p {
     font-family: $body-font;
