--- a/src/styles/scss/_pages.scss
+++ b/src/styles/scss/_pages.scss
@@ -36,6 +36,7 @@
   }
 
   .portfolio-item {
+    box-shadow: 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
 
     a {
