styling update and restrucutre scss architecture

--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -1,14 +1,17 @@
 $light-color: #f0f0f0;
 $grey-color: #747474;
-$dark-color: #333333;
-$accent-color: #20bf6b;
+$dark-color: #222222;
+$accent-color: #3498db;
 
-$dark-bg: #222222;
+$dark-bg: #1d1f21;
 
 $title-size: 6rem;
 $subtitle-size: 2.4rem;
+
 $font-size-sm: 0.8rem;
 $font-size-lg: 1.5rem;
+
+$social-size: 1.5rem;
 
 $spacer: 2rem;
 $spacer-sm: 1rem;
