--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -9,129 +9,91 @@ html,
 body,
 #app {
   height: 100%;
-  scroll-behavior: smooth;
-  font-family: "Karla", sans-serif;
-  font-weight: 400; }
+  scroll-behavior: smooth; }
 
 body {
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow-x: hidden; }
+
+.test {
+  border: 2px solid red; }
+
+.light-section {
+  background-color: #f0f0f0;
+  color: #222222; }
+  .light-section a {
+    color: #747474; }
+
+.dark-section {
+  background-color: #222222;
+  color: #f0f0f0; }
+  .dark-section a {
+    color: #747474; }
+
+html,
+body,
+#app {
+  font-family: "Karla", sans-serif;
+  font-weight: 400;
   color: #f0f0f0; }
 
-h1,
-h2,
-h3,
-h4 {
+h1, h2, h3 {
   font-family: "Rubik", sans-serif; }
 
-h2,
-h3 {
+h2, h3 {
   text-transform: uppercase;
   color: #747474; }
 
-h3 {
+h2 {
   font-size: 1.5rem; }
 
 h3 {
   font-size: 1.1rem; }
 
-h4 {
-  font-style: italic; }
+a {
+  text-transform: uppercase;
+  color: #747474; }
+  a:hover {
+    cursor: pointer;
+    text-decoration: none;
+    color: #3498db; }
 
-a:hover {
-  cursor: pointer;
-  text-decoration: none; }
-
-section h1 {
+.section-header {
   text-decoration: underline;
-  text-decoration-color: #20bf6b;
-  text-decoration-thickness: 0.375rem; }
+  text-decoration-color: #3498db;
+  text-decoration-thickness: 0.375rem;
+  padding-bottom: 2rem; }
 
-section p {
+p {
   font-family: "Karla", sans-serif;
   font-weight: 300; }
-
-footer a {
-  color: #f0f0f0; }
 
 #greeting {
   font-family: "Rubik", sans-serif;
   font-weight: bold;
   letter-spacing: 2px;
-  color: #20bf6b;
+  color: #3498db;
   font-size: 1.2rem; }
 
 .nav-item {
   font-family: "Karla", sans-serif;
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 0.8rem;
+  color: #f0f0f0; }
+
+.banner-text {
+  color: #f0f0f0; }
+  .banner-text .display-text {
+    font-size: 6rem; }
+  .banner-text #typewriter {
+    font-size: 2.4rem;
+    color: inherit;
+    text-transform: none; }
+
+.footer {
   font-size: 0.8rem; }
 
-.bg-dark {
-  background-color: #222222 !important; }
-
-.test {
-  border: 2px solid red; }
-
-header {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  background: url(../../assets/images/header-background.jpg) no-repeat center center fixed;
-  background-size: cover !important;
-  -webkit-background-size: cover !important;
-  text-align: center; }
-  header a:hover {
-    color: #20bf6b; }
-  header .navbar-dark a {
-    color: #f0f0f0 !important; }
-  header nav .navbar-brand {
-    font-size: 1.5rem; }
-  header nav a {
-    color: #f0f0f0 !important; }
-    header nav a .name {
-      color: #20bf6b !important; }
-  header nav .active a {
-    color: #20bf6b !important; }
-  header .banner {
-    display: inline-block;
-    vertical-align: middle;
-    margin: auto;
-    width: 85%;
-    padding-bottom: 30px;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
-    header .banner .banner-text {
-      color: #f0f0f0; }
-      header .banner .banner-text .display-text {
-        font-size: 6rem; }
-      header .banner .banner-text #typewriter {
-        font-size: 2.4rem;
-        color: inherit;
-        text-transform: none; }
-
-.arrow-container {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  margin: 0;
-  text-align: center; }
-  .arrow-container a {
-    margin: auto;
-    color: #f0f0f0; }
-
-.word-cloud text {
-  font-family: "Rubik", sans-serif; }
-  .word-cloud text:hover {
-    transform: scale(2);
-    cursor: pointer; }
-
-/*------------------*/
 section {
   min-height: 100%;
   width: 100%;
@@ -144,26 +106,8 @@ section {
     margin: 4rem auto; }
     section .container-fluid .flex-col {
       padding: 2rem; }
-  section h1 {
-    padding-bottom: 2rem; }
   section .list-group-item {
     background-color: inherit; }
-
-.light-section {
-  background-color: #f0f0f0;
-  color: #333333; }
-  .light-section a {
-    color: #747474; }
-    .light-section a:hover {
-      color: #20bf6b; }
-
-.dark-section {
-  background-color: #333333;
-  color: #f0f0f0; }
-  .dark-section a {
-    color: #f0f0f0; }
-    .dark-section a:hover {
-      color: #20bf6b; }
 
 .filters a {
   padding: 2rem; }
@@ -172,7 +116,60 @@ section {
   margin: 0 auto; }
 
 .filters .active {
-  color: #20bf6b; }
+  color: #3498db; }
+
+header {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background: no-repeat center center fixed;
+  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/images/header-background.jpg);
+  background-size: cover;
+  -webkit-background-size: cover;
+  text-align: center; }
+  header a:link {
+    color: #f0f0f0; }
+  header .navbar-brand {
+    font-size: 1.5rem; }
+  header #FirstName {
+    color: #f0f0f0; }
+  header #LastName {
+    color: #3498db; }
+  header .active-nav a {
+    color: #3498db !important; }
+  header .banner {
+    display: inline-block;
+    vertical-align: middle;
+    margin: auto;
+    width: 85%;
+    padding-bottom: 30px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  header .dark-bg {
+    background-color: #1d1f21; }
+
+.footer {
+  background-color: #1d1f21;
+  padding: 1rem; }
+  .footer a i:link {
+    color: #f0f0f0; }
+  .footer a i:hover {
+    color: #3498db; }
+  .footer .list-inline-item .nav-link {
+    color: #f0f0f0; }
+  .footer #username {
+    text-transform: lowercase; }
+    .footer #username a:link {
+      color: #f0f0f0; }
+    .footer #username a:hover {
+      color: #3498db; }
+  .footer .social-item i {
+    font-size: 1.5rem;
+    padding: 0 2rem;
+    color: #f0f0f0; }
 
 #about .profile-pic {
   max-width: 100%;
@@ -241,6 +238,24 @@ section {
 #contact .container-fluid {
   margin: 1.5rem auto; }
 
+.arrow-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  margin: 0;
+  text-align: center; }
+  .arrow-container a {
+    margin: auto; }
+
+.word-cloud text {
+  font-family: "Rubik", sans-serif; }
+  .word-cloud text:hover {
+    transform: scale(2);
+    cursor: pointer; }
+
+/*------------------*/
 .skillbars {
   display: flex;
   flex-direction: column;
@@ -311,31 +326,15 @@ section {
   to {
     transform: scaleX(1); } }
 
-@media only screen and (max-width: 900px) {
-  header .banner {
-    padding-bottom: 12px; } }
-
-@media only screen and (max-width: 767px) {
-  header .banner {
-    padding-bottom: 12px;
-    padding-top: 6px; } }
-
-@media only screen and (max-width: 480px) {
-  header .banner {
-    padding-top: 24px; } }
-
-.footer {
-  background-color: #333333;
-  padding: 1rem;
-  color: white !important;
-  font-size: 0.8rem; }
-  .footer a:hover {
-    color: #20bf6b !important; }
-  .footer i:hover {
-    color: #20bf6b !important; }
-  .footer #username {
-    color: #20bf6b; }
-  .footer .social-item i {
-    font-size: 1.5rem;
-    padding: 0 2rem;
-    color: #f0f0f0; }
+.arrow-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  margin: 0;
+  text-align: center; }
+  .arrow-container .arrow-icon {
+    margin: auto; }
+    .arrow-container .arrow-icon a {
+      color: #f0f0f0; }
