--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -2,13 +2,19 @@
 $light-color: #f0f0f0;
 $dark-color: #222222;
 $grey-color: #747474;
-$accent-color: #3498db;
+$accent-color: #ed2024;
 $dark-bg: #1d1f21;
 
 // name display
 $title-size: 6rem;
 // typewriter display
 $subtitle-size: 2.4rem;
+
+// opacity for header background
+$opacity: 0.2;
+
+// max height for logo
+$logo-height: 4rem;
 
 // font sizes
 $font-size-sm: 0.8rem;
