--- a/src/styles/scss/pages/_portfolio.scss
+++ b/src/styles/scss/pages/_portfolio.scss
@@ -29,10 +29,12 @@
       width: 100%;
       opacity: 0;
       transition: 0.5s ease;
-      background-color: #333333;
+      background-color: $dark-color;
+      text-align: center;
 
       .portfolio-item-content {
         position: absolute;
+        width: 100%;
         top: 0;
         bottom: 0;
         overflow: hidden;
@@ -40,6 +42,7 @@
         padding: $spacer;
         margin: 0 auto;
         vertical-align: middle;
+        text-align: center;
       }
     }
 
