--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -18,12 +18,17 @@ $logo-height: 4rem;
 
 // font sizes
 $font-size-sm: 0.8rem;
+$font-size-md: 1.2rem;
 $font-size-lg: 1.5rem;
+$font-size-xl: 1.8rem;
 $social-size: 1.5rem;
 
 // fonts (imported in index.html)
 $heading-font: "Rubik", sans-serif;
 $body-font: "Karla", sans-serif;
+
+// section header underline thickness
+$underline-thickness: 0.375rem;
 
 // spacing
 $spacer: 2rem;
