--- a/src/styles/scss/layout/_header.scss
+++ b/src/styles/scss/layout/_header.scss
@@ -18,7 +18,7 @@ header {
   }
 
   .navbar-brand {
-    font-size: $font-size-lg * 1.5;
+    font-size: $font-size-xl;
     letter-spacing: -0.2rem;
   }
 
@@ -45,7 +45,7 @@ header {
     vertical-align: middle;
     margin: auto;
     width: 85%;
-    padding-bottom: 30px;
+    padding-bottom: $spacer;
     text-align: center;
     position: absolute;
     top: 50%;
