--- a/src/styles/scss/pages/_portfolio.scss
+++ b/src/styles/scss/pages/_portfolio.scss
@@ -1,7 +1,7 @@
 // styling specific to the portfolio section
 #portfolio {
   .container-fluid {
-    margin: 4rem auto;
+    margin: $spacer-lg auto;
   }
 
   .portfolio-item {
@@ -13,7 +13,7 @@
     }
 
     h3 {
-      font-size: 1.2rem;
+      font-size: $font-size-md;
     }
 
     img {
