--- a/src/styles/scss/abstract/_variables.scss
+++ b/src/styles/scss/abstract/_variables.scss
@@ -8,6 +8,9 @@ $dark-bg: #1d1f21;
 // opacity for header background
 $opacity: 0.2;
 
+// arrow icon in the hero color
+$header-arrow-icon: $light-color;
+
 // fonts (imported in index.html)
 $heading-font: "Rubik", sans-serif;
 $body-font: "Karla", sans-serif;
