--- a/src/styles/scss/pages/_contact.scss
+++ b/src/styles/scss/pages/_contact.scss
@@ -13,15 +13,24 @@
   }
 }
 
+.btn,
 .btn-resume,
-.btn-submit {
+.btn-submit,
+.btn-success {
   background-color: $accent-color;
-  border-color: $accent-color;
+  border-color: transparent;
 
   color: $light-color;
 
   &:hover {
-    background-color: darken($accent-color, 10%);
+    background-color: darken($accent-color, 8%);
     color: darken($light-color, 5%);
+  }
+}
+
+.contact-form {
+  margin-top: $spacer;
+  button {
+    width: 100%;
   }
 }
